[package]
name = "sg04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["serde", "with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["http2", "multipart"] }
bincode = "1.3.3"
chrono = "0.4.34"
#libxlsxwriter-sys = "1.1.5"
plotters = "0.3.5"
regex = "1.10.3"
serde = "1.0.196"
thousands = "0.2.0"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
uuid = { version = "1.7.0", features = ["v4"] }
#xlsxwriter = "0.6.0"
shapefile = "0.4.0"
dbase = "0.3.0"
financial = "1.1.5"

